fix bug in second express task

--- a/Express zadanie2 dane formularz/assets/index.html
+++ b/Express zadanie2 dane formularz/assets/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="http://localhost:3000/useform" method="GET">
+  <form action="http://localhost:3000/userform" method="GET">
     <p>
       First Name: <input type="text" name="first_name">
     </p>
