--- a/Aplikacja Chat/public/index.html
+++ b/Aplikacja Chat/public/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div id="root">
-    
+
   </div>
-  <script src="./bundle.js"></script>
-<script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script></body>
+
+
+<script type="text/javascript" src="/bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="bundle.js"></script></body>
 </html>
